--- a/app/src/main/res/layout/activity_new_layout.xml
+++ b/app/src/main/res/layout/activity_new_layout.xml
@@ -10,7 +10,7 @@
     <EditText
         android:id="@+id/t_input"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="@dimen/textHeight"
         android:importantForAutofill="no"
         android:inputType="text"
         android:text="@string/metin_gir" />
@@ -18,7 +18,7 @@
     <TextView
         android:id="@+id/translated_text"
         android:layout_width="match_parent"
-        android:layout_height="68dp"
+        android:layout_height="@dimen/textHeight"
         android:scrollbars="vertical"
         android:text=""
         android:textSize="20sp" />
