--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="bWidth">250dp</dimen>
     <dimen name="switchwidth">150dp</dimen>
     <dimen name="switchheight">60dp</dimen>
+    <dimen name="textHeight">140</dimen>
 </resources>
